# spatialomicspipe

./: pyproject.toml  readme.md  run_napari.py
config/: ingest.yaml
napari_spatialpipe/: __init__.py  napari.yaml  widget.py
notebooks/: 01_ingest_visium.ipynb  roi.geojson  rois.geojson
spatialpipe/: README.md  cli.py  integration.py  io.py  lazy.py  neighborhoods.py  pipeline.py  plugin.py
tests/: test_integration.py  test_io.py  test_lazy.py  test_neighborhoods.py
