[project]
name = "spatialpipe"
version = "0.1.0"
description = "A scalable, NGFF-native framework for spatial omics analysis built on SpatialData, OME-Zarr, and the geospatial Python stack."
authors = [
    { name = "Muhammad Qasim", email = "khanjiqasim@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"

dependencies = [
    "spatialdata (>=0.6.1,<0.7.0)",
    "scanpy (<1.12)",
    "ome-zarr (>=0.12.2,<0.13.0)",
    "zarr (>=3.1.5,<4.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "napari[all] (>=0.6.6,<0.7.0)",
    "click (>=8.3.1,<9.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "squidpy (>=1.7.0,<2.0.0)"
]

[project.scripts]
spatialpipe = "spatialpipe.cli:cli"


# ✅ MODERN napari registration (NO WARNING)
[project.entry-points."napari.manifest"]
napari-spatialpipe = "napari_spatialpipe:napari.yaml"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[tool.poetry]
packages = [
    { include = "spatialpipe" },
    { include = "napari_spatialpipe" }
]

include = ["napari_spatialpipe/napari.yaml"]
